remove typo in navigation

--- a/_config.yml
+++ b/_config.yml
@@ -17,5 +17,5 @@ navigation:
     link: https://candypink.github.io/blog.html
   - name: Portfolio
     link: https://candypink.github.io/portfolio.html
-  - name: AboutMe
+  - name: About
     link: https://candypink.github.io/about.html
