redirect to main blog home

--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,5 @@ navigation:
     link: https://candypink.github.io/portfolio.html
   - name: About
     link: https://candypink.github.io/about.html
+
+bloghome_url: https://candypink.github.io/
