--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
-title: A CandyPink Blog
 email: candypink@outlook.it
 bloghomeurl: https://candypink.github.io/
+blogtitle: A CandyPink Blog
 
 github_username:  candypink
 
